ui/analyse/css/study/relay/_admin.scss
.relay-admin {
  grid-area: round-training;

  @extend %box-neat-force, %flex-column;

  background: $c-bg-box;
  margin-top: 1em;

  h2 {
    @extend %flex-between;

    font-size: 1.2em;
    padding: 0.4em 0.6em;
    border-bottom: $border;
  }

  .state {
    @extend %flex-center-nowrap;

    border-bottom: $border;
    min-height: 3.5em;

    @include transition;

    &::before {
      @extend %flex-center;

      font-size: 1.3em;
      margin: 0 0.5em 0 0.8em;
    }

    > span {
      @extend %break-word, %ellipsis;
    }

    .fat {
      font-size: 1.4em;
    }

    &.off {
      background: $m-primary_bg--mix-80;
      color: #fff;
    }

    &.on {
      background: $c-good;
      color: $c-over;
    }
  }
  button.clickable:hover {
    cursor: pointer;
    background: $c-primary;
    color: $c-over;
  }

  .time {
    font-weight: bold;
  }

  .log {
    @extend %break-word;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0.3em 0.7em;
    max-height: 20vh;

    > div {
      @extend %flex-center-nowrap;

      margin: 4px 0;

      &::before {
        color: $c-good;
        font-size: 1.3em;
        margin-inline-end: 0.5em;
      }
    }

    time {
      @extend %roboto;

      margin-inline-start: 0.3em;
    }

    .err::before {
      color: $c-bad;
    }
  }
}
.relay-admin__container {
  .study__chapters {
    max-height: 25vh;
    overflow-y: auto;
  }
}

